<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mi_super_app"
        android:textSize="30sp"
        android:layout_marginBottom="20dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_completo"
        android:layout_marginBottom="20dp"
        android:id="@+id/nombre"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edad"
        android:inputType="number"
        android:layout_marginBottom="20dp"
        android:id="@+id/edad"
        />
    <Spinner
        android:id="@+id/spnMaterias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="20dp">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Mañana"
                android:checked="true"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="Tarde"/>
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="Noche"/>
        </RadioGroup>
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mostrar_profesor"
        android:id="@+id/check"
        android:layout_marginBottom="20dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/matricular"
        android:id="@+id/btnMatricular"
        android:onClick="matricular"
        />
</LinearLayout>